[package]
name = "kolorwheel"
version = "1.1.0"
authors = ["ern0 <ern0@linkbroker.hu>"]
license-file = "LICENSE"
description = "Color palette generator for egui.rs"
readme = "README.md"
repository = "https://github.com/ern0/kolorwheel.rs"

edition = "2021"
publish = false

[dependencies]
all_asserts = "2.3.1"
assert_float_eq = "1.1.3"
eframe = "0.23.0"
egui = "0.23.0"
thiserror = "1.0.44"
