[package]
name = "kolorwheel"
version = "1.1.1"
authors = ["ern0 <ern0@linkbroker.hu>"]
license-file = "LICENSE"
description = "Color palette generator for GUI applications"
readme = "README.md"
repository = "https://github.com/ern0/kolorwheel.rs"

edition = "2021"
publish = true

[dependencies]
# none

[dev-dependencies]
eframe = "0.23.0"
egui = "0.23.0"
all_asserts = "2.3.1"
assert_float_eq = "1.1.3"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc/style.css"]
